# msgscope

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  PLAN.md  README.md  pyproject.toml
.github/: release-notes-template.md
.github/workflows/: ci.yml  release.yml
docs/: json-schema.md
docs/checks/: ATTACH_OLEGUID.md  CODEPAGE_MISMATCH.md  FILETIME_SANITY.md  HEADER_COUNTS.md  MSGFLAGS.md  NAMEID_INTEGRITY.md  ORPHAN_SUBSTG.md
packaging/: pyinstaller_entry.py
sample/: README.md  good_minimal.msg  synthetic_orphan.msg
scripts/: capture_corpus.py  make_synthetic.py  tamper_msg.py
src/msgscope/: __init__.py  __main__.py  cli.py  container.py  engine.py  filetime.py  findings.py  properties.py
src/msgscope/checks/: __init__.py  attach_oleguid.py  base.py  codepage_mismatch.py  filetime_sanity.py  header_counts.py  message_flags.py  nameid_integrity.py  orphan_substg.py
src/msgscope/report/: __init__.py  json_report.py  text_report.py
tests/: conftest.py  test_attach_oleguid.py  test_baseline_clean.py  test_cli.py  test_codepage_mismatch.py  test_corpus.py  test_embedded_message.py  test_filetime_sanity.py  test_header_counts.py  test_message_flags.py  test_nameid_integrity.py  test_orphan_substg.py  test_readonly_guarantee.py  test_report_determinism.py
tests/fixtures/: builders.py  cfb_writer.py
